2004-08-04  Francois Dumont <dums@...>

	* stlport/stl/debug/_list.h, _slist.h: small review of the stlport debug code.
	Removal of any Standard reference in the slist class debug implementation. Removal
	of some unjustified iterator invalidation.

	* stlport/stl/_locale.h, _collate.h, src/locale.cpp, locale_catalog.cpp, locale_impl.cpp:
	Split of the locale class implementation into _LocaleBase base class with no member
	template methods which is exported and the locale class which is not exported. This
	is a workaround for the MSVC6 compiler.

2004-08-03  Francois Dumont <dums@...>

	* stlport/stl/_iterator.h: Fix of the back_insert_iterator, front_insert_iterator
	nd insert_iterator to make them assignable like specify in the Standard requirements
	of the output iterators.

	* test/unit/insert_test.cpp, finsert_test.cpp, binsert_test.cpp: Addition of tests for
	the assignment operators on the output iterators.

2004-08-02  Francois Dumont <dums@...>

	* stlport/stl/_string.h, _string.c, debug/_string.h: split of the basic_string
	implementation into a class with no member templates and one with the member 
	templates. Only the one with no member templates is exported. This is a MSVC6
	bug workaround as this compiler try  to look for the class method symbols within
	the dynamic library even if this symbol is the one of template method which is 
	not exported. That also make the basic_string implementation more clean so it
	has been adopted for all compilers.

2004-07-29  Francois Dumont <dums@...>

	* test/unit/locale_test.cpp: Fix bad macro _STLP_NO_EXCEPTIONS spelling 
	and add of a check for real locale implementation. Patch done by
	Michael Fink.

	* stlport/stl/debug/_debug.h, _debug.c, _iterator.h: Modification of the
	__check_same_owner_or_null function name to the more intuitive 
	__check_same_or_null_owner thanks a Aleksey Sanin remark.

2004-07-26  Petr Ovtchenkov <ptr@Island...>

	* src/explore/Makefiles/gmake/lib/gcc.mak: avoid linkage with libstd++