@@ -46,8 +46,12 @@ iterator_category(const  _DBG_iter_base< _STLP_NON_DBG_STRING_BASE >&) {
 #endif
 
 template <class _CharT, class _Traits, class _Alloc> 
-class basic_string : private __range_checker<_STLP_NON_DBG_STRING_BASE >,
-                     public _STLP_NON_DBG_STRING_BASE {
+class basic_string : private __range_checker<_STLP_NON_DBG_STRING_BASE >
+                   , public _STLP_NON_DBG_STRING_BASE
+#if !defined(basic_string) && defined (_STLP_USE_PARTIAL_SPEC_WORKAROUND)
+                   , public __stlport_class<basic_string<_CharT, _Traits, _Alloc> >
+#endif
+{
 private:
   typedef _STLP_NON_DBG_STRING_BASE _Base;
   typedef basic_string<_CharT, _Traits, _Alloc> _Self;
